# Noteslip

./: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
renderer/: excalidraw.bundle.css  excalidraw.html  index.html  renderer.js  styles.css  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: main.rs
