[package]
name = "noteslip"
version = "26.0.1"
description = "Daily log app built with Rust and Tauri"
authors = ["Noteslip contributors"]
license = "GPL-3.0"
repository = "https://github.com/david2005yunqi/Noteslip"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["sync"] }
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
